[package]
name = "rman"
version = "0.3.0"
authors = ["ev3nvy"]
edition = "2021"
description = "Parser for Riot Manifest file format."
repository = "https://github.com/ev3nvy/rman-rs"
license = "MIT OR Apache-2.0"
keywords = ["rman", "riot", "rito", "manifest", "riot-manifest"]
categories = ["data-structures", "encoding", "parser-implementations"]

[dependencies]
anyhow = "1.0.86"
byteorder = "1.4.3"
flatbuffers = "24.3.25"
futures = "0.3.30"
log = "0.4.20"
rayon = "1.10.0"
reqwest = { version = "0.12.5", default-features = false, features = [
    "blocking",
] }
serde = { version = "1.0.188", features = ["derive"], optional = true }
stopwatch = "0.0.7"
thiserror = "1.0.49"
tokio = "1.25.0"
zstd = "0.13.2"

[build-dependencies]
flatbuffers = "24.3.25"
zstd = "0.13.2"

[dev-dependencies]
httptest = "0.16.1"
tokio = { version = "1.25.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[features]
default = ["rustls-tls"]
version_error = []
serde = ["dep:serde"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
